--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>cowjar-extra</artifactId>
             <version>1.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.29</version>
+        </dependency>
     </dependencies>
 
     <build>
