add multiple prefixes and cspy prefixes totallynotskidded™ some codes from ChipmunkBot™

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -1,4 +1,16 @@
+prefixes:
+  - 'default*'
+  - 'defaultcbot '
+
+commandSpyPrefixes:
+  - '/defaultcbot '
+
+consolePrefixes:
+  normalCommandsPrefix: '.'
+  consoleServerPrefix: '/'
+
 reconnectDelay: 7000
+
 keys:
   normalKey: 'normal hash key here'
   ownerKey: 'OwnerHash™ key here'
