--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>JDA</artifactId>
             <version>4.4.0_350</version>
         </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.12.4</version>
+        </dependency>
     </dependencies>
 
     <build>
