--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -17,6 +17,9 @@ discord:
   servers:
     localhost:25565: 'channel id'
 
+trusted:
+  - 'player name'
+
 keys:
   normalKey: 'normal hash key here'
   ownerKey: 'OwnerHash™ key here'
@@ -50,3 +53,4 @@ bots:
     port: 25565
     username: 'ChomeNS_Bot'
     kaboom: false
+    serverName: 'Localhost' # name it whatever you like, it will be used as server name in trusted broadcast
