--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -17,6 +17,8 @@ discord:
   servers:
     localhost:25565: 'channel id'
 
+ownerName: 'chayapak' # currently this is only used in the creator command and the console
+
 trusted:
   - 'player name'
 
