improve and fix cmd handler (first commit on arch) yup this is my first commit on arch linux,.,.,..,.,., yes i use arch btw :sunglasses:

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -14,6 +14,8 @@ reconnectDelay: 7000
 discord:
   prefix: 'default!'
   token: 'token here'
+  trustedRoleName: 'Trusted'
+  adminRoleName: 'Admin' # NOTE: admin will be able to access servereval..
   servers:
     localhost:25565: 'channel id'
 
