--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -61,16 +61,20 @@ selfCare:
   prefix: true
   username: true # do NOT set this to false unless you know what you are doing
 bots:
-  # username and kaboom are optional.
+  # username, kaboom, useCore, useChat and hasEssentials are optional.
+
   # for username if it doesn't exist it will default to random username
   # for kaboom it will just default to `false`
   # for serverName name it whatever you like, it will be used as server name in trusted broadcast
+  # for useCore it just sends the command using chat instead of using core. recommended to enable useChat too when this is enabled
   # for useChat when the bot sends output (tellraw) it will chat instead of using the core to run tellraw
   # for hasEssentials it is self-explanatory. if the server has essentials plugin just set it to true
+
   - host: 'localhost'
     port: 25565
     username: 'ChomeNS_Bot'
     kaboom: false
     serverName: 'Localhost'
+    useCore: true
     useChat: false
     hasEssentials: false
