--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -61,14 +61,16 @@ selfCare:
   prefix: true
   username: true # do NOT set this to false unless you know what you are doing
 bots:
-  # username, kaboom, useCore, useChat and hasEssentials are optional.
+  # username, kaboom, useCore, useChat, hasEssentials and reconnectDelay are optional.
 
+  # more info:
   # for username if it doesn't exist it will default to random username
   # for kaboom it will just default to `false`
-  # for serverName name it whatever you like, it will be used as server name in trusted broadcast
+  # for serverName name it whatever you like, it will be used as server name in trusted broadcast and in console
   # for useCore it just sends the command using chat instead of using core. recommended to enable useChat too when this is enabled
   # for useChat when the bot sends output (tellraw) it will chat instead of using the core to run tellraw
   # for hasEssentials it is self-explanatory. if the server has essentials plugin just set it to true
+  # for reconnectDelay if not specified it will just default to the global reconnectDelay
 
   - host: 'localhost'
     port: 25565
@@ -78,3 +80,4 @@ bots:
     useCore: true
     useChat: false
     hasEssentials: false
+    reconnectDelay: 2000
