--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.github.steveice10</groupId>
             <artifactId>mcprotocollib</artifactId>
-            <version>1.19.4-SNAPSHOT</version>
+            <version>1.19.4-2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
