--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -34,7 +34,7 @@ weatherApiKey: 'key here' # weatherapi.com key
 
 core:
   layers: 3
-  refillInterval: 60000
+  refillInterval: 300000 # (60 * 5) * 1000 (5 minutes)
   # PLEASE give valid JSON component here else the core don't refill at all
   customName: '[{"text":"ChomeNS ","color":"yellow"},{"text":"Core","color":"green"},{"text":"™","color":"gold"}]'
 selfCare:
