--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -18,6 +18,7 @@ discord:
   token: 'token here'
   trustedRoleName: 'Trusted'
   adminRoleName: 'Admin' # NOTE: admin will be able to access servereval..
+  statusMessage: 'Gay Sex'
   servers:
     localhost:25565: 'channel id'
 
