--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -23,7 +23,7 @@ discord:
   servers:
     localhost:25565: 'channel id'
 
-ownerName: 'chayapak' # currently this is only used in the creator command and the console
+ownerName: 'chayapak' # currently this is only used in the console
 
 trusted:
   - 'player name'
