--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -35,7 +35,14 @@ keys:
 weatherApiKey: 'key here' # weatherapi.com key
 
 core:
-  layers: 3
+  start:
+    x: 0
+    y: 0
+    z: 0
+  end:
+    x: 15
+    y: 2
+    z: 15
   refillInterval: 300000 # (60 * 5) * 1000 (5 minutes)
   # PLEASE give valid JSON component here else the core don't refill at all
   customName: '[{"text":"ChomeNS ","color":"yellow"},{"text":"Core","color":"green"},{"text":"™","color":"gold"}]'
