--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -47,6 +47,8 @@ core:
   # PLEASE give valid JSON component here else the core don't refill at all
   customName: '[{"text":"ChomeNS ","color":"yellow"},{"text":"Core","color":"green"},{"text":"™","color":"gold"}]'
 selfCare:
+  checkInterval: 1000
+
   # vanilla
   op: true
   gamemode: true
