--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
             <artifactId>joda-time</artifactId>
             <version>2.12.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-text-serializer-legacy</artifactId>
+            <version>4.13.1</version>
+        </dependency>
     </dependencies>
 
     <build>
