--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.chayapak1</groupId>
+    <name>ChomeNS Bot</name>
+    <groupId>land.chipmunk.chayapak</groupId>
     <artifactId>chomens_bot</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>rolling</version> <!-- mabe -->
     <packaging>jar</packaging>
 
     <properties>
