actually use say gex

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -19,7 +19,7 @@ discord:
   token: 'token here'
   trustedRoleName: 'Trusted'
   adminRoleName: 'Admin' # NOTE: admin will be able to access servereval..
-  statusMessage: 'Gay Sex'
+  statusMessage: 'Say Gex'
   inviteLink: 'https://discord.gg/xdgCkUyaA4'
   servers:
     localhost:25565: 'channel id'
