improve prefix self care the prefix self care is currently disabled/not used in the main instance but whatever..

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -81,8 +81,10 @@ selfCare:
     positionPacketsPerSecond: 10 # 10 seems to be the best number for me
 
   # extras
-  prefix: true
-  username: true
+  prefix:
+    enabled: true
+    prefix: '&8[&eChomeNS Bot&8]'
+  username: true # MIGHT cause problem(s) if set to false (not tested,.,.)
 bots:
   # username, kaboom, useCore, useChat, hasEssentials and reconnectDelay are optional.
 
