--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -1,3 +1,5 @@
+# Config file for ChomeNS Bot
+
 prefixes:
   - 'default*'
   - 'defaultcbot '
@@ -86,14 +88,11 @@ selfCare:
     prefix: '&8[&eChomeNS Bot&8]'
   username: true # MIGHT cause problem(s) if set to false (not tested,.,.)
 bots:
-  # username, kaboom, useCore, useChat, hasEssentials and reconnectDelay are optional.
-
-  # more info:
-  # username - if it doesn't exist it will default to random username
-  # kaboom - it will just default to `false`
+  # username - optional, if not specified it will just use a random username
+  # kaboom - defaults to false mabe
   # serverName - name it whatever you like, it will be used as server name in trusted broadcast and in console
-  # useCore - it just sends the command using chat instead of using core. recommended to enable useChat too when this is enabled
-  # useChat - when the bot sends output (tellraw) it will chat instead of using the core to run tellraw
+  # useCore - if enabled it just sends the command using chat instead of using core. recommended to enable useChat too when this is enabled
+  # useChat - when the bot tellraws it will chat instead of using the core to run tellraw
   # hasEssentials - if the server has essentials plugin just set it to true!! ! !!31
   # reconnectDelay - if not specified it will just default to the global reconnectDelay
   # removeNamespaces - when the bot sends a command it will remove like `minecraft:` for example if set to true
@@ -108,3 +107,7 @@ bots:
     hasEssentials: false
     reconnectDelay: 2000
     removeNamespaces: false
+  # or without the optional ones:
+  # - host: 'localhost'
+  #   port: 25565
+  #   serverName: 'Localhost'
