--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 
         <dependency>
             <groupId>net.kyori</groupId>
-            <artifactId>adventure-api</artifactId>
-            <version>4.13.0</version>
+            <artifactId>adventure-text-serializer-ansi</artifactId>
+            <version>4.14.0</version>
         </dependency>
 
         <dependency>
