--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@
  */
 
 plugins {
+    id 'java'
     id 'java-library'
     id 'maven-publish'
     id 'io.freefair.lombok' version '8.0.1'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'land.chipmunk.chayapak'
@@ -42,6 +44,12 @@ dependencies {
     implementation 'joda-time:joda-time:2.12.4'
     implementation 'net.kyori:adventure-text-serializer-legacy:4.13.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'land.chipmunk.chayapak.chomens_bot.Main'
+    }
 }
 
 publishing {
