--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'joda-time:joda-time:2.12.4'
     implementation 'net.kyori:adventure-text-serializer-legacy:4.13.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
+    implementation 'io.socket:socket.io-client:2.1.0'
 }
 
 jar {
