change rtp position + fix whoops

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -13,7 +13,7 @@ consolePrefixes:
 
 internetCheck:
   enabled: true
-  url: 'https://sus.red'
+  address: 'https://sus.red'
 
 discord:
   enabled: false
