make self care not use ch at queue

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -61,6 +61,8 @@ core:
   customName: '[{"text":"ChomeNS ","color":"yellow"},{"text":"Core","color":"green"},{"text":"™","color":"gold"}]'
 
 selfCare:
+  delay: 225 # NOTE: self care does NOT use chat queue
+
   # vanilla
   op: true
   gamemode: true
