--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,11 @@ description = 'ChomeNS Bot'
 java.sourceCompatibility = JavaVersion.VERSION_17
 
 repositories {
-    mavenLocal()
+    mavenCentral()
+
+    maven {
+        url = uri('https://repo.opencollab.dev/maven-releases/')
+    }
 
     maven {
         url = uri('https://repo.opencollab.dev/maven-snapshots/')
