--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,12 @@ repositories {
     maven {
         url = uri('https://repo.maven.apache.org/maven2/')
     }
+
+    mavenLocal()
 }
 
 dependencies {
     implementation 'com.github.steveice10:mcprotocollib:1.20-1-SNAPSHOT'
-    implementation 'com.github.steveice10:mcauthlib:1.5-SNAPSHOT'
     implementation 'net.kyori:adventure-text-serializer-ansi:4.14.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.guava:guava:31.1-jre'
