the console server cummand

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -7,9 +7,7 @@ prefixes:
 commandSpyPrefixes:
   - '/defaultcbot '
 
-consolePrefixes:
-  normalCommandsPrefix: '.'
-  consoleServerPrefix: '/'
+consoleCommandPrefix: '.'
 
 internetCheck:
   enabled: true
