remove kaboom and hasEssentials from config and make it d y n a m i c

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -101,24 +101,20 @@ eval:
 
 bots:
   # username - optional, if not specified it will just use a random username
-  # kaboom - defaults to false
-  # creayun - same as kaboom
+  # creayun - defaults to false
   # serverName - name it whatever you like, it will be used as server name in trusted broadcast and in console
   # useCore - if enabled it just sends the command using chat instead of using core. recommended to enable useChat too when this is enabled
   # useChat - when the bot tellraws it will chat instead of using the core to run tellraw
-  # hasEssentials - if the server has essentials plugin just set it to true!! ! !!31
   # removeNamespaces - when the bot sends a command it will remove like `minecraft:` for example if set to true
   # coreRateLimit - will ignore commands if reached the ratelimit
 
   - host: 'localhost'
     port: 25565
     username: 'ChomeNS_Bot'
-    kaboom: false
     creayun: false
     serverName: 'Localhost'
     useCore: true
     useChat: false
-    hasEssentials: false
     reconnectDelay: 2000
     removeNamespaces: false
     chatQueueDelay: 125
