--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -34,6 +34,11 @@ discord:
   servers:
     localhost:25565: 'channel id'
 
+music:
+  URLRatelimit:
+    seconds: 15
+    limit: 7
+
 colorPalette:
   primary: 'yellow'
   secondary: 'gold'
