--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -49,7 +49,10 @@ colorPalette:
   number: 'gold'
   ownerName: 'green'
 
-ownerName: 'chayapak' # currently this is only used in the console
+# currently this is only used in the console
+ownerNames:
+  # don't leave this array blank or it can cause errors
+  - 'chayapak'
 
 ownerAuthentication:
   enabled: false
