Revert "many owner names...."
This reverts commit 487b828c6238a2258f908b20837571a28db05fbd.

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -49,10 +49,7 @@ colorPalette:
   number: 'gold'
   ownerName: 'green'
 
-# currently this is only used in the console
-ownerNames:
-  # don't leave this array blank or it can cause errors
-  - 'chayapak'
+ownerName: 'chayapak' # currently this is only used in the console
 
 ownerAuthentication:
   enabled: false
