bossbar namespace configurable

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -69,6 +69,8 @@ keys:
 
 weatherApiKey: 'key here' # weatherapi.com key
 
+bossBarNamespace: 'chomens_bot' # useful when you make a clone of the bot
+
 core:
   start:
     x: 0
