support for IRC it took uh mabe 4 hours (wednesday 18:00 - 21:00 and thursday (today) 8:00) no OP check yet but may add because commands need them

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -34,6 +34,19 @@ discord:
   servers:
     localhost:25565: 'channel id'
 
+irc:
+  enabled: true
+  prefix: '!'
+  host: 'irc.libera.chat'
+  port: 6665
+  nickname: 'chomens-bot'
+  username: 'chomens-bot'
+  realName: 'chomens-bot'
+  hostName: 'null'
+  serverName: 'null'
+  servers:
+    localhost:25565: '#chomens-localhost' # channel name
+
 music:
   URLRatelimit:
     seconds: 15
