--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
     mavenCentral()
 
     maven {
+        url = uri('https://repo.opencollab.dev/main/')
+    }
+
+    maven {
         url = uri('https://repo.opencollab.dev/maven-snapshots/')
     }
 
@@ -37,8 +41,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.steveice10:mcprotocollib:1.20.2-1-SNAPSHOT'
-    implementation 'net.kyori:adventure-text-serializer-ansi:4.14.0'
+    implementation 'org.geysermc.mcprotocollib:protocol:1.21-SNAPSHOT'
+    implementation 'net.kyori:adventure-text-serializer-ansi:4.15.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.jline:jline:3.23.0'
@@ -47,7 +51,7 @@ dependencies {
     implementation 'org.luaj:luaj-jse:3.0.1'
     implementation 'net.dv8tion:JDA:5.0.0-beta.12'
     implementation 'joda-time:joda-time:2.12.4'
-    implementation 'net.kyori:adventure-text-serializer-legacy:4.13.1'
+    implementation 'net.kyori:adventure-text-serializer-legacy:4.15.0'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
     implementation 'io.socket:socket.io-client:2.1.0'
     implementation 'de.maxhenkel.opus4j:opus4j:2.0.2'
@@ -56,7 +60,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'land.chipmunk.chayapak.chomens_bot.Main'
+        attributes 'Main-Class': 'me.chayapak1.chomens_bot.Main'
     }
 }
 
