--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -128,6 +128,7 @@ bots:
   # serverName - name it whatever you like, it will be used as server name in trusted broadcast and in console
   # useCore - if enabled it just sends the command using chat instead of using core. recommended to enable useChat too when this is enabled
   # useChat - when the bot tellraws it will chat instead of using the core to run tellraw
+  # coreCommandSpy - set to true if server supports enabling player's commandspy though command block
   # removeNamespaces - when the bot sends a command it will remove like `minecraft:` for example if set to true
   # coreRateLimit - will ignore commands if reached the ratelimit
 
@@ -138,6 +139,7 @@ bots:
     serverName: 'Localhost'
     useCore: true
     useChat: false
+    coreCommandSpy: false
     reconnectDelay: 2000
     removeNamespaces: false
     chatQueueDelay: 125
