--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,16 @@
-.gradle
-**/build/
-!src/**/build/
-
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/dictionaries
-.idea/**/shelf
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-
 # Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+.gradle
+build/
+run/
 
-.idea/misc.xml
-
-gradle
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
-# Cache of project
-.gradletasknamecache
-
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# IntelliJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
 
 # Exploits plugin
-/src/main/java/land/chipmunk/chayapak/chomens_bot/plugins/ExploitsPlugin.java
+src/main/java/me/chayapak1/chomens_bot/plugins/ExploitsPlugin.java
 
 # Testing plugins
-/src/main/java/land/chipmunk/chayapak/chomens_bot/plugins/testing
-/.idea/modules/
-/.idea/modules.xml
+src/main/java/me/chayapak1/chomens_bot/plugins/testing
