--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -9,19 +9,19 @@ commandSpyPrefixes:
 
 consoleCommandPrefix: '.'
 
-internetCheck:
-  enabled: false
-  address: 'https://sus.red'
-
-# how backup works is that it checks for the address every 1 minute,
+# how backup works is that it makes a http request for the address
 # if the address is reachable it will not start the bot
 # if the address is not reachable then it will start the bot
 
+# *** it doesn't care about the status code
+
 # if the bot has already been started and the address is back up it
-# will stop the bot (using System.exit(1))
+# will stop the bot
 backup:
   enabled: false
   address: 'https://fard.sex/check'
+  interval: 1000 # in milliseconds
+  failTimes: 2
 
 discord:
   enabled: false
