--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -83,6 +83,7 @@ keys:
 weatherApiKey: 'key here' # weatherapi.com key
 
 bossBarNamespace: 'chomens_bot' # useful when you make a clone of the bot
+teamName: 'chomens_bot' # i recommend having this value the same as bossBarNamespace
 
 core:
   start:
