--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'net.kyori:adventure-text-serializer-ansi:4.15.0'
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
     implementation 'org.jline:jline:3.23.0'
     implementation 'ch.qos.logback:logback-classic:1.5.11'
     implementation 'com.github.pircbotx:pircbotx:2.3.1'
