BIG feat,fix,refactor: use database and some minor refactoring which also fixes memory issues and * related to PersistentDataUtilities

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -23,6 +23,12 @@ backup:
   interval: 1000 # in milliseconds
   failTimes: 2
 
+database:
+  enabled: false
+  address: 'localhost' # jdbc:mysql://<address>/chomens_bot
+  username: 'chomens_bot'
+  password: '123456'
+
 discord:
   enabled: false
   prefix: 'default!'
