refactor: fix typo in the last commit (chome ns moment)

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -89,7 +89,7 @@ keys:
 weatherApiKey: 'key here' # weatherapi.com key
 
 namespace: 'default_chomens_bot' # useful when you make a clone of the bot
-teamName: 'default_chomens_bot' # i recommend having this value the same as namesapce
+teamName: 'default_chomens_bot' # i recommend having this value the same as namespace
 
 core:
   start:
