--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -75,8 +75,9 @@ imposterFormatChecker:
 
 ownerAuthentication:
   enabled: false
-  key: ''
-  timeout: 6000
+  muteReason: ''
+  ips:
+    localhost:25565: '127.0.0.1'
 
 trusted:
   - 'player name'
