fix: get the run task working in IntelliJ

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,10 @@ application {
     mainClass = 'me.chayapak1.chomens_bot.Main'
 }
 
+run {
+    standardInput = System.in
+}
+
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
