--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -145,6 +145,7 @@ bots:
   # username - optional, if not specified it will just use a random username
   # creayun - defaults to false
   # serverName - name it whatever you like, it will be used as server name in trusted broadcast and in console
+  # hidden - if enabled, the server address will not show anywhere in the bot, including discord, netmsg, etc., except console
   # useCore - if enabled it just sends the command using chat instead of using core. recommended to enable useChat too when this is disabled
   # useCorePlaceBlock - uses the place block core instead of the main core. only used if useCore is enabled
   # useChat - when the bot tellraws it will chat instead of using the core to run tellraw
@@ -165,6 +166,7 @@ bots:
   #   username: 'ChomeNS_Bot'
   #   creayun: false
   #   serverName: 'Localhost'
+  #   hidden: false
   #   useCore: true
   #   useCorePlaceBlock: false
   #   useChat: false
