--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
-    implementation 'com.mysql:mysql-connector-j:9.1.0'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.2'
     implementation 'org.jline:jline:3.23.0'
     implementation 'ch.qos.logback:logback-classic:1.5.11'
     implementation 'com.github.pircbotx:pircbotx:2.3.1'
